modules/vpc/vpc.tf
resource "aws_vpc" "this" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true
    enable_dns_support   = true
    tags = merge(
        local.common_tags,
        {
            Name = var.vpc_name
        }
    ) 
}
